--- a/src/main/resources/com/oop/groupone/bgpress_group1/Hemel/MaintainPhysicalEnvironment.fxml
+++ b/src/main/resources/com/oop/groupone/bgpress_group1/Hemel/MaintainPhysicalEnvironment.fxml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.oop.groupone.bgpress_group1.Hemel.MaintainPhysicalEnvironmentController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="545.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.groupone.bgpress_group1.Hemel.MaintainPhysicalEnvironmentController">
+   <children>
+      <Label layoutX="67.0" layoutY="75.0" text="Area Assignment:" />
+      <Label layoutX="67.0" layoutY="121.0" text="Shift:" />
+      <Label layoutX="67.0" layoutY="164.0" text="Inspection Schedule:" />
+      <Label layoutX="408.0" layoutY="75.0" text="Issue Severity:" />
+      <Label layoutX="408.0" layoutY="121.0" text="Recommended Action:" />
+      <Label fx:id="resultLabel" layoutX="70.0" layoutY="381.0" prefHeight="42.0" prefWidth="86.0" text="Result">
+         <font>
+            <Font size="24.0" />
+         </font>
+      </Label>
+      <TextField fx:id="areaAssignmentField" layoutX="183.0" layoutY="71.0" />
+      <ComboBox fx:id="shiftCB" layoutX="183.0" layoutY="117.0" prefWidth="150.0" />
+      <TextField fx:id="issueSeverityField" layoutX="529.0" layoutY="71.0" />
+      <TextField fx:id="recommendedActionField" layoutX="544.0" layoutY="117.0" />
+      <Button layoutX="68.0" layoutY="250.0" mnemonicParsing="false" onAction="#inspectAreaOnButton" prefHeight="55.0" prefWidth="176.0" text="Inspect Area" />
+      <Button layoutX="380.0" layoutY="250.0" mnemonicParsing="false" onAction="#generateReportOnAction" prefHeight="55.0" prefWidth="176.0" text="Generate Report" />
+      <DatePicker fx:id="inspectionScheduleDP" layoutX="188.0" layoutY="160.0" prefHeight="32.0" prefWidth="175.0" />
+   </children>
 </AnchorPane>
