--- a/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/feedback.fxml
+++ b/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/feedback.fxml
@@ -11,18 +11,16 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.groupone.bgpress_group1.Sumaiya.Feedbackcontroller">
    <children>
-      <TableView fx:id="tableview" layoutX="255.0" layoutY="70.0" prefHeight="330.0" prefWidth="503.0">
+      <TableView fx:id="tableview" layoutX="235.0" layoutY="95.0" prefHeight="304.0" prefWidth="503.0">
         <columns>
-          <TableColumn fx:id="useridcolumn" prefWidth="87.20001220703125" text="User id" />
-          <TableColumn fx:id="feedbackcolumn" prefWidth="210.4000244140625" text="Feedback" />
-            <TableColumn fx:id="datecolumn" minWidth="0.0" prefWidth="110.4000244140625" text="Date" />
-            <TableColumn fx:id="status" prefWidth="90.40008544921875" text="Status" />
+          <TableColumn fx:id="staffnamecolumn" prefWidth="87.20001220703125" text="Staff name" />
+          <TableColumn fx:id="staffidcolumn" prefWidth="157.5999755859375" text="Staff ID" />
+            <TableColumn fx:id="feedbackcolumn" minWidth="0.0" prefWidth="164.79998779296875" text="Feedback" />
+            <TableColumn fx:id="datecolumn" prefWidth="90.40008544921875" text="Date" />
         </columns>
       </TableView>
-      <Button layoutX="442.0" layoutY="410.0" mnemonicParsing="false" onAction="#viewfeedback" text="View Feedback" />
       <VBox prefHeight="246.0" prefWidth="178.0">
          <children>
             <MenuBar fx:id="menubar">
@@ -48,10 +46,12 @@
             <Button mnemonicParsing="false" onAction="#signout" text="Signout" />
          </children>
       </VBox>
-      <Label layoutX="384.0" layoutY="24.0" text="Handle Staff Feedback">
+      <Label layoutX="384.0" layoutY="24.0" text="View Staff Feedback">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
+      <Button layoutX="235.0" layoutY="62.0" mnemonicParsing="false" onAction="#load" text="Load Feedback" />
+      <Label fx:id="alertlabel" layoutX="14.0" layoutY="417.0" prefHeight="18.0" prefWidth="313.0" />
    </children>
 </AnchorPane>
