--- a/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/UupdateResource.fxml
+++ b/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/UupdateResource.fxml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.groupone.bgpress_group1.Sumaiya.UupdateResourcecontroller">
    <children>
@@ -42,19 +39,19 @@
          </children>
       </VBox>
       <Label layoutX="240.0" layoutY="110.0" />
-      <Label layoutX="226.0" layoutY="77.0" text="Resource Items" />
-      <Label layoutX="266.0" layoutY="128.0" text="Quantity" />
-      <TextField fx:id="quantitytf" layoutX="325.0" layoutY="124.0" />
-      <ComboBox fx:id="resourcecb" layoutX="325.0" layoutY="73.0" prefWidth="150.0" />
-      <TableView fx:id="tableview" layoutX="288.0" layoutY="226.0" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableview" layoutX="259.0" layoutY="106.0" prefHeight="319.0" prefWidth="414.0">
         <columns>
-          <TableColumn fx:id="itemscolumn" prefWidth="101.5999755859375" text="Resource items" />
-          <TableColumn fx:id="quantitycolumn" prefWidth="97.5999755859375" text="Quantity" />
+          <TableColumn fx:id="resourcecolumn" prefWidth="162.4000244140625" text="Resource items" />
+          <TableColumn fx:id="quantitycolumn" prefWidth="134.39996337890625" text="Quantity" />
+            <TableColumn fx:id="budgetcolumn" prefWidth="115.99997558593748" text="Budget" />
         </columns>
       </TableView>
-      <Button layoutX="362.0" layoutY="183.0" mnemonicParsing="false" onAction="#save" text="Save Changes" />
-      <TextArea fx:id="budgetta" layoutX="616.0" layoutY="124.0" prefHeight="43.0" prefWidth="150.0" />
-      <TextField fx:id="upbudgettf" layoutX="617.0" layoutY="82.0" promptText="Budget" />
-      <Button layoutX="649.0" layoutY="183.0" mnemonicParsing="false" onAction="#updatebutton" text="Update" />
+      <Button layoutX="259.0" layoutY="70.0" mnemonicParsing="false" onAction="#laod" text="Load" />
+      <Label layoutX="337.0" layoutY="22.0" text="Update Resource Inventory">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="alertlabel" layoutX="23.0" layoutY="408.0" prefHeight="18.0" prefWidth="219.0" />
    </children>
 </AnchorPane>
