--- a/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/submitwork.fxml
+++ b/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/submitwork.fxml
@@ -13,7 +13,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.groupone.bgpress_group1.Sumaiya.Submitworkcontroller">
    <children>
       <Label layoutX="307.0" layoutY="26.0" text="Submit Your Work">
@@ -32,8 +31,8 @@
       </HBox>
       <Label layoutX="279.0" layoutY="256.0" text="Remarks" />
       <TextArea fx:id="remarksArea" layoutX="358.0" layoutY="256.0" prefHeight="62.0" prefWidth="220.0" />
-      <Button layoutX="366.0" layoutY="365.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
-      <Button layoutX="483.0" layoutY="365.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
+      <Button layoutX="308.0" layoutY="365.0" mnemonicParsing="false" onAction="#handleSubmit" text="Submit" />
+      <Button layoutX="508.0" layoutY="365.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
       <VBox prefHeight="200.0" prefWidth="164.0">
          <children>
             <MenuBar>
@@ -60,5 +59,6 @@
          </children>
       </VBox>
       <Label fx:id="alertlabel" layoutX="28.0" layoutY="419.0" prefHeight="18.0" prefWidth="301.0" />
+      <Button layoutX="381.0" layoutY="365.0" mnemonicParsing="false" onAction="#updateprogres" text="Update Progress" />
    </children>
 </AnchorPane>
