--- a/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/validateBudget&resource.fxml
+++ b/src/main/resources/com/oop/groupone/bgpress_group1/Sumaiya/validateBudget&resource.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="450.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.oop.groupone.bgpress_group1.Sumaiya.ValidateBudgetResourcecontroller">
    <children>
@@ -35,5 +40,26 @@
             <Button mnemonicParsing="false" onAction="#signout" text="Signout" />
          </children>
       </VBox>
+      <Label layoutX="161.0" layoutY="104.0" text="Resource Name" />
+      <Label layoutX="203.0" layoutY="145.0" text="Quantity" />
+      <Label layoutX="215.0" layoutY="187.0" text="Budget" />
+      <Label layoutX="235.0" layoutY="18.0" text="Validate Budget &amp; Resource ">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Label>
+      <TextField fx:id="quantitytf" layoutX="267.0" layoutY="141.0" />
+      <TextField fx:id="budgettf" layoutX="267.0" layoutY="183.0" />
+      <ComboBox fx:id="resourcecob" layoutX="267.0" layoutY="100.0" prefWidth="150.0" />
+      <TableView fx:id="tableview" layoutX="434.0" layoutY="59.0" prefHeight="378.0" prefWidth="351.0">
+        <columns>
+          <TableColumn fx:id="resourcecolumn" prefWidth="111.2000732421875" text="Resource" />
+          <TableColumn fx:id="quantitycolumn" prefWidth="117.5999755859375" text="quantity" />
+            <TableColumn fx:id="budgetcolumn" prefWidth="120.800048828125" text="Budget" />
+        </columns>
+      </TableView>
+      <Button layoutX="211.0" layoutY="227.0" mnemonicParsing="false" onAction="#save" prefHeight="26.0" prefWidth="84.0" text="Add to List" />
+      <Button layoutX="213.0" layoutY="268.0" mnemonicParsing="false" onAction="#updatereso" text="Save Changes" />
+      <Label fx:id="alertlabel" layoutX="21.0" layoutY="419.0" prefHeight="18.0" prefWidth="358.0" />
    </children>
 </AnchorPane>
